fix layout bug

--- a/app/global.css
+++ b/app/global.css
@@ -6,6 +6,14 @@
   html {
     font-family: Inter, Roboto, sans-serif;
   }
+
+  body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+  }
 }
 
 @font-face {
